--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 Hello
+<code>距离csp还有n天，接龙哈！发给你最好的10个朋友，超过15个就永远幸福，不许在你这里断了。<br>
+今天必须发完，不许偷懒。想起谁，发给谁，包括我，别小气 ，如果我不是你的朋友，你也可以不发。<br>
+传送0人 CSP忘写freopen<br>
+传送1人 freopen写错<br>
+传送5人 不可以总司令骗分大神<br>
+传送10人 第三题暴力得80%的分数<br>
+传送15人 卡常卡过第四题<br>
+传送20人 AK CSP！<br>
+传送114514人 AK IOI</code>
+
 </body>
 </html>
